Fix auth container too wide on wider screens

--- a/resources/sass/components/Auth/_auth.scss
+++ b/resources/sass/components/Auth/_auth.scss
@@ -13,6 +13,7 @@
     #auth-container {
         background-color: $font-main;
         width: 25vw;
+        max-width: 450px;
         height: min-content;
         border-radius: 15px;
         box-shadow: 5px 5px 21px -10px $font-dark;
@@ -37,12 +38,21 @@
         }
 
         .auth {
+            width: 100%;
+            height: 100%;
             margin-top: 2rem;
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            .form-wrapper {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
             #auth-form {
-                width: calc(25vw - 4rem);
+                width: calc(100% - 4rem);
                 button[type=submit] {
                     margin-right: auto;
                     margin-top: 1rem;
